<resources>
    <string name="open_album">Abrir álbum</string>
    <string name="grant_permission">Conceder permiso</string>
    <string name="permission_not_granted">La aplicación requiere acceso al almacenamiento para acceder a los elementos almacenados en MediaStore.</string>
    <string name="lockscreen_transport_play_description">lockscreen_transport_play_description</string>
    <string name="lockscreen_transport_pause_description">lockscreen_transport_pause_description</string>
    <string name="receiver_id">8639B975</string>
    <string name="app_name">JMX Player</string>
    <string name="rotate">Orientacion de pantalla</string>
    <string name="resize">Ajuste Pantalla</string>
    <string name="aspect_ratio">Relación de aspecto</string>
    <string name="download_video">Guardar en el dispositivo</string>
    <string name="open_with">Abrir con...</string>
    <string name="enter_ua">User-Agent</string>
    <string name="enter_header">Encabezados adicionales</string>
    <string name="how_to_header">separe la clave y los valores con una coma, vea la sugerencia como ejemplo</string>
    <string name="how_to_header_whint">separe la clave y los valores con una coma, vea la sugerencia como ejemplo , ex : Origin,jmxplayer.com,Referer,www.jmxplayer.com</string>
    <string name="user_agent">JMX Player 1.2</string>
    <string name="stream_link">http://tv2.ebox.live:8080/live/nk-six.m3u8</string>
    <string name="enter_stream_link">Enlace de transmisión</string>
    <string name="your_stream_name">Nombre de transmisión personalizado</string>
    <string name="enter_stream_name">Nombre de Transmisión</string>
    <string name="accept">ACEPTAR</string>
    <string name="reject">CANCELAR</string>
    <string name="splash_logo">splash_logo</string>
    <string name="casty_introduction_text">Utilice este botón para conectarse con Chromecast</string>
    <string name="bottom_sheet_header_none">Ninguna lista seleccionada</string>
    <string name="no_track">No track</string>
    <string name="trackName">%1$s, %2$s</string>
    <string name="loading">Cargando Contenido..\nExpere un momento por favor.</string>
    <string name="movie_name">Nombre de pelicula</string>
    <string name="season_episode">Temporada | Episodio</string>
    <string name="language_name">Nombre del lenguaje</string>
    <string name="back_button">back button</string>
    <string name="menu_button">menu button</string>
    <string name="forward_button">forward button</string>
    <string name="pause_button">pause button</string>
    <string name="cast_button">cast button</string>
    <string name="backward_button">backward button</string>
    <string name="play_button">play button</string>
    <string name="ADMOB_ID">ca-app-pub-3940256099942544~3347511713</string>
    <string name="Interstitial_AD_ID">ca-app-pub-3940256099942544/1033173712</string>
    <string name="coverimage">coverImage</string>
    <string name="optional">Opcional</string>
    <string name="track_selector">Selector de pista</string>
    <string name="browse">Galeria</string>
    <string name="stream">Stream</string>
    <string name="history">Historial</string>
    <string name="settings">Ajustes</string>
    <string name="playlist">Lista de reproducción</string>
    <string name="search">Buscar</string>
    <string name="refresh">Actualizar</string>
    <string name="delete">Borrar</string>
    <string name="N_A">N/A</string>
    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="sample">Sample</string>
    <string name="recent">Recent</string>
    <string name="tracks">Tracks</string>
    <string name="toggle_player">Player</string>
    <string name="toggle_render">Render</string>
    <string name="toggle_ratio">Scale</string>
    <string name="show_info">Info</string>
    <string name="vdec">vdec</string>
    <string name="fps">fps</string>
    <string name="v_cache">v-cache</string>
    <string name="a_cache">a-cache</string>
    <string name="load_cost">load-cost</string>
    <string name="seek_cost">seek_cost</string>
    <string name="seek_load_cost">seek_load_cost</string>
    <string name="tcp_speed">tcp_speed</string>
    <string name="bit_rate">bit_rate</string>
    <string name="media_information">Media Information</string>
    <string name="mi_player">Player</string>
    <string name="mi_media">Media</string>
    <string name="mi_profile_level">Profile level</string>
    <string name="mi_pixel_format">Pixel format</string>
    <string name="mi_resolution">Resolution</string>
    <string name="mi_length">Length</string>
    <string name="mi_stream_fmt1">Stream #%d</string>
    <string name="mi_type">Type</string>
    <string name="mi_language">Language</string>
    <string name="mi_codec">Codec</string>
    <string name="mi_frame_rate">Frame rate</string>
    <string name="mi_bit_rate">Bit rate</string>
    <string name="mi_sample_rate">Sample rate</string>
    <string name="mi_channels">Channels</string>
    <string name="mi__selected_video_track">*</string>
    <string name="mi__selected_audio_track">*</string>
    <string name="mi__selected_subtitle_track">*</string>
    <string name="TrackType_video">Video</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_unknown">Unknown</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Error Occurred</string>
    <string name="VideoView_error_button">OK</string>
    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>
    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>
    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>
    <string name="pref_title_general">General</string>
    <string name="pref_key_enable_background_play">pref.enable_background_play</string>
    <string name="pref_title_enable_background_play">Enable background play</string>
    <string name="pref_summary_enable_background_play">need Android 4.0+</string>
    <string name="pref_key_using_android_player">pref.using_android_player</string>
    <string name="pref_title_using_android_player">Using system player</string>
    <string name="pref_summary_using_android_player" />
    <string name="pref_key_player">pref.player</string>
    <string name="pref_title_player">Choose Player</string>
    <string-array name="pref_entries_player">
        <item>Auto Select</item>
        <item>AndroidMediaPlayer</item>
        <item>IjkMediaPlayer</item>
        <item>IjkExoMediaPlayer</item>
    </string-array>
    <string-array name="pref_entry_values_player">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="pref_entry_summaries_player">
        <item>Auto Select</item>
        <item>AndroidMediaPlayer</item>
        <item>IjkMediaPlayer</item>
        <item>IjkExoMediaPlayer</item>
    </string-array>
    <string name="pref_key_theme">pref.theme</string>
    <string name="pref_title_theme">Tema para App</string>
    <string name="pref_summary_theme">Select App theme</string>
    <string-array name="pref_entries_theme">
        <item>Auto</item>
        <item>Claro</item>
        <item>Oscuro</item>
    </string-array>
    <string-array name="pref_entry_values_theme">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="pref_key_player_select">pref.player.select</string>
    <string name="pref_title_player_select">Default Player</string>
    <string name="pref_summary_player_select">Seleccionar Reproductor</string>
    <string-array name="pref_entries_player_select">
        <item>Auto</item>
        <item>VLC Player</item>
        <item>EXO Player</item>
        <item>IJK Player</item>
    </string-array>
    <string-array name="pref_entry_values_player_select">
        <item>0</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
    </string-array>
    <string name="pref_key_render">pref.render</string>
    <string name="pref_title_render">Render Mode</string>
    <string name="pref_summary_render">Choose Render Mode</string>
    <string-array name="pref_entries_render">
        <item>Auto</item>
        <item>Prefer</item>
        <item>On</item>
        <item>Off</item>
    </string-array>
    <string-array name="pref_entry_values_render">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="pref_title_ijkplayer_video">Video: ijkplayer</string>
    <string name="pref_title_exoplayer_video">Video: ExoPlayer</string>
    <string name="pref_key_using_media_codec">pref.using_media_codec</string>
    <string name="pref_title_using_media_codec">Using MediaCodec</string>
    <string name="pref_summary_using_media_codec" />
    <string name="pref_key_using_media_codec_auto_rotate">pref.using_media_codec_auto_rotate</string>
    <string name="pref_title_using_media_codec_auto_rotate">Using MediaCodec auto rotate</string>
    <string name="pref_summary_using_media_codec_auto_rotate" />
    <string name="pref_key_media_codec_handle_resolution_change">pref.media_codec_handle_resolution_change</string>
    <string name="pref_title_media_codec_handle_resolution_change">MediaCodec handle resolution change</string>
    <string name="pref_summary_media_codec_handle_resolution_change" />
    <string name="pref_key_pixel_format">pref.pixel_format</string>
    <string name="pref_title_pixel_format">Pixel Format</string>
    <string-array name="pref_entries_pixel_format">
        <item>Auto Select</item>
        <item>RGB 565</item>
        <item>RGB 888</item>
        <item>RGBX 8888</item>
        <item>YV12</item>
        <item>OpenGL ES2</item>
    </string-array>
    <string name="pref_title_ijkplayer_audio">Audio: ijkplayer</string>
    <string name="pref_key_using_opensl_es">pref.using_opensl_es</string>
    <string name="pref_title_using_opensl_es">Using OpenSL ES</string>
    <string name="pref_summary_using_opensl_es" />
    <string name="pref_key_enable_surface_view">pref.enable_surface_view</string>
    <string name="pref_title_enable_surface_view">Enable SurfaceView</string>
    <string name="pref_summary_enable_surface_view" />
    <string name="pref_key_enable_texture_view">pref.enable_texture_view</string>
    <string name="pref_title_enable_texture_view">Enable TextureView</string>
    <string name="pref_summary_enable_texture_view" />
    <string name="playlist_next">Playlist Next</string>
    <string name="playlist_prev">Playlist Prev</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="image">Imagen</string>
</resources>