<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:key="@string/app_name"
        app:title="Interfaz">

        <ListPreference
            android:summary="@string/pref_summary_theme"
            app:entries="@array/pref_entries_theme"
            app:entryValues="@array/pref_entry_values_theme"
            app:key="@string/pref_key_theme"
            app:title="@string/pref_title_theme" />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="@string/app_name"
        app:title="Media Player">

        <ListPreference
            android:summary="@string/pref_summary_player_select"
            app:entries="@array/pref_entries_player_select"
            app:entryValues="@array/pref_entry_values_player_select"
            app:key="@string/pref_key_player_select"
            app:title="@string/pref_title_player_select" />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="@string/app_name"
        app:title="@string/pref_title_exoplayer_video">

        <ListPreference
            android:summary="@string/pref_summary_render"
            app:entries="@array/pref_entries_render"
            app:entryValues="@array/pref_entry_values_render"
            app:key="@string/pref_key_render"
            app:title="@string/pref_title_render" />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="@string/app_name"
        app:title="@string/pref_title_ijkplayer_video">

        <SwitchPreference
            app:key="@string/pref_key_using_media_codec"
            app:summary="@string/pref_summary_using_media_codec"
            app:title="@string/pref_title_using_media_codec" />
        <SwitchPreference
            app:key="@string/pref_key_using_media_codec_auto_rotate"
            app:summary="@string/pref_summary_using_media_codec_auto_rotate"
            app:title="@string/pref_title_using_media_codec_auto_rotate" />
        <SwitchPreference
            android:summary="@string/pref_summary_media_codec_handle_resolution_change"
            app:key="@string/pref_key_media_codec_handle_resolution_change"
            app:title="@string/pref_title_media_codec_handle_resolution_change" />
        <ListPreference
            app:entries="@array/pref_entries_pixel_format"
            app:entryValues="@array/pref_entry_values_pixel_format"
            app:key="@string/pref_key_pixel_format"
            app:title="@string/pref_title_pixel_format" />
    </PreferenceCategory>
    <PreferenceCategory
        app:key="@string/app_name"
        app:title="@string/pref_title_ijkplayer_audio">

        <SwitchPreference
            app:key="@string/pref_key_using_opensl_es"
            app:summary="@string/pref_summary_using_opensl_es"
            app:title="@string/pref_title_using_opensl_es" />
        <SwitchPreference
            android:summary="@string/pref_summary_enable_surface_view"
            android:title="@string/pref_title_enable_surface_view"
            app:key="@string/pref_key_enable_surface_view" />
        <SwitchPreference
            android:summary="@string/pref_summary_enable_texture_view"
            android:title="@string/pref_title_enable_texture_view"
            app:key="@string/pref_key_enable_texture_view" />

    </PreferenceCategory>
    <PreferenceCategory android:title="Ayuda e información">
        <Preference
            android:key="@string/jmx_support"
            android:summary="Envíanos un mensaje a nuestro correo para recibir asistencia e informar de errores"
            android:title="Soporte" />
        <Preference
            android:key="@string/jmx_terms"
            android:summary="Leer términos y condiciones"
            android:title="Condiciones de Uso" />
        <Preference
            android:key="@string/jmx_policy"
            android:summary="Leer política de privacidad"
            android:title="Política de Privacidad" />
        <Preference
            android:key="@string/jmx_version_key"
            android:summary="@string/jmx_version"
            android:title="Version de aplicacion" />
    </PreferenceCategory>
</PreferenceScreen>