<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/player_style_common"
    android:background="#74000000">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_exo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:background="@color/TransparentWhite"
        android:focusable="true"
        android:nextFocusDown="@id/player_back"
        android:orientation="horizontal"
        android:padding="3dp">

        <ImageButton
            android:id="@+id/player_back"
            style="@style/ExoMediaButton"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:contentDescription="@string/back_button"
            android:focusable="true"
            android:nextFocusDown="@id/player_track_selector"
            android:scaleType="centerInside"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            app:layout_constraintBottom_toBottomOf="@id/constraint_layout_exo"
            app:layout_constraintStart_toStartOf="@id/constraint_layout_exo"
            app:layout_constraintTop_toTopOf="@id/constraint_layout_exo" />


        <TextView
            android:id="@+id/textView_title_exo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/movie_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/player_back"
            app:layout_constraintTop_toTopOf="@id/constraint_layout_exo" />


        <TextView
            android:id="@+id/textView_desc_exo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:lines="1"
            android:text="@string/season_episode"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/player_back"
            app:layout_constraintTop_toBottomOf="@id/textView_title_exo" />


        <TextView
            android:id="@+id/textView_language_exo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/language_name"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/player_back"
            app:layout_constraintTop_toBottomOf="@id/textView_desc_exo" />

        <ImageButton
            android:id="@+id/player_track_selector"
            style="@style/ExoMediaButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/track_selector"
            android:focusable="true"
            android:nextFocusDown="@id/player_custom_cast"
            android:padding="10dp"
            android:scaleType="fitEnd"
            android:src="@drawable/ic_baseline_video_settings_24"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/player_custom_cast"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.mediarouter.app.MediaRouteButton
            android:id="@+id/player_custom_cast"
            style="@style/Theme.MediaRouter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/cast_button"
            android:focusable="true"
            android:nextFocusDown="@id/player_menu"
            android:padding="10dp"
            android:scaleType="fitEnd"
            app:externalRouteEnabledDrawable="@drawable/ic_baseline_cast_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/player_menu"
            app:layout_constraintTop_toTopOf="parent"
            app:mediaRouteButtonTint="@color/White" />

        <ImageButton
            android:id="@+id/player_menu"
            style="@style/ExoMediaButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/menu_button"
            android:focusable="true"
            android:nextFocusDown="@id/lln_play_actions"
            android:padding="10dp"
            android:scaleType="fitEnd"
            android:src="@drawable/ic_baseline_menu_24"
            app:layout_constraintBottom_toBottomOf="@id/constraint_layout_exo"
            app:layout_constraintEnd_toEndOf="@id/constraint_layout_exo"
            app:layout_constraintTop_toTopOf="@id/constraint_layout_exo" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/lln_play_actions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:focusable="true"
        android:gravity="center"
        android:nextFocusDown="@id/playlistPrev"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageButton
            android:id="@+id/playlistPrev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@drawable/transparent_circle_background"
            android:contentDescription="@string/playlist_prev"
            android:nextFocusDown="@id/player_rew"
            android:padding="10dp"
            android:src="@drawable/ic_skip_back" />

        <ImageButton
            android:id="@+id/player_rew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@drawable/transparent_circle_background"
            android:contentDescription="@string/backward_button"
            android:padding="10dp"
            android:src="@drawable/ic_rewind" />

        <ImageButton
            android:id="@+id/player_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_background"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/play_button"
            android:nextFocusDown="@id/player_ffwd"
            android:padding="10dp"
            android:src="@drawable/ic_play"
            app:tint="@color/black" />

        <ImageButton
            android:id="@+id/player_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_background"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/pause_button"
            android:nextFocusDown="@id/player_ffwd"
            android:padding="10dp"
            android:src="@drawable/ic_pause"
            android:visibility="gone"
            app:tint="@color/black" />

        <ImageButton
            android:id="@+id/player_ffwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/transparent_circle_background"
            android:contentDescription="@string/forward_button"
            android:nextFocusDown="@id/playlistNext"
            android:padding="10dp"
            android:src="@drawable/ic_fast_forward" />

        <ImageButton
            android:id="@+id/playlistNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/transparent_circle_background"
            android:contentDescription="@string/playlist_next"
            android:nextFocusDown="@id/line"
            android:padding="10dp"
            android:src="@drawable/ic_skip_forward" />
    </LinearLayout>
</RelativeLayout>