<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:hint="@string/enter_stream_name"
            android:padding="2dp"
            app:boxBackgroundColor="@color/SkyBlue"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:hintEnabled="true"
            app:hintTextColor="@color/DeepSkyBlue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_view_custom_stream_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nextFocusDown="@id/text_view_custom_stream_url"
                android:text="@string/your_stream_name"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:hint="@string/enter_stream_link"
            android:padding="2dp"
            app:boxBackgroundColor="@color/LightGreen"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:hintEnabled="true"
            app:hintTextColor="@color/LimeGreen">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_view_custom_stream_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nextFocusDown="@id/text_view_custom_stream_user_agent"
                android:text="@string/stream_link"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:hint="@string/enter_ua"
            android:padding="2dp"
            app:boxBackgroundColor="@color/LightPink"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:hintEnabled="true"
            app:hintTextColor="@color/Pink">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_view_custom_stream_user_agent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="4"
                android:nextFocusDown="@id/button_stream_confirm"
                android:text="@string/user_agent"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="5dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_stream_confirm"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:nextFocusDown="@id/button_stream_cancel"
                android:text="@string/accept"
                android:textColor="@color/Green"
                android:textSize="12sp"
                app:backgroundTint="@color/White" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_stream_cancel"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/reject"
                android:textColor="@color/colorAccent"
                android:textSize="12sp"
                app:backgroundTint="@color/White" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>