<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.BrowseFragment">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_custom_browse"
        style="@style/Widget.MaterialComponents.TabLayout.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_item_video"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/video" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_item_audio"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/audio" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_item_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/image" />
    </com.google.android.material.tabs.TabLayout>

    <include
        android:id="@+id/include_browser"
        layout="@layout/content_browser" />


</LinearLayout>